--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="app"></div>
+    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.33.0/min/vs/loader.js"></script>
+    <script>
+      require.config({
+        paths: {
+          vs: "https://cdn.jsdelivr.net/npm/monaco-editor@0.33.0/min/vs",
+        },
+      });
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
